--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <nav id="navbar" class="flex items-center justify-between p-4 bg-black fixed top-0 w-full z-50">
         <div class="flex items-center">
-            <img src="Notelogo-Photoroom.png" alt="CodeHelp Logo" class="h-10" width="40" height="40"/>
+            <img src="Notelogo-Photoroom.png" alt="NoteTube Logo" class="h-10" width="40" height="40"/>
             <span class="ml-2 text-xl font-bold text-blue-500">NoteTube <span class="text-white">AI</span></span>
         </div>
         <ul class="flex space-x-4">
@@ -38,7 +38,7 @@
 
     <!-- Main Content -->
     <div class="p-8 mt-16" id="home">
-        <!-- CodeHelp RED Section -->
+        <!-- NoteTube RED Section -->
         <div class="bg-red-900 p-8 rounded-lg mb-8" id="red-launch">
             <div class="flex justify-between items-center">
                 <div>
@@ -50,10 +50,10 @@
                         Get ready for our most powerful learning experience yet, it's time to go RED
                     </p>
                     <button id="notifyBtn" class="mt-4 bg-red-600 text-white px-4 py-2 rounded-full">
-                        <i class="fas fa-bell"></i> Notify Me
+                        <i class="bell"></i> Notify Me
                     </button>
                 </div>
-                <img src="logo-text.webp" alt="CodeHelp RED Logo" class="h-24" width="100" height="100"/>
+                <img src="logo-text.webp" alt="NoteTube RED Logo" class="h-24" width="100" height="100"/>
             </div>
         </div>
 
