--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <li><a href="#tutorials" class="hover:text-blue-500">Tutorials</a></li>
         </ul>
         <div class="flex items-center space-x-2">
-            <span><a id="dash_name" href="#dashboard">Dashboard</a></span>
-            <img src="generic-user-icon-9.jpg" alt="User Avatar" class="h-10 rounded-full" width="40" height="40"/>
+            <span><a id="dash_name" href="login_signup.html">Login/SignUp</a></span>
+            <img src="generic-user-icon-9.jpg" alt="User Avatar" class="h-10 rounded-full" width="40" height="40"/ hidden>
         </div>
     </nav>
 
