fix login/signup & dashboard

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="#articles" class="hover:text-blue-500">Articles</a></li>
             <li><a href="#tutorials" class="hover:text-blue-500">Tutorials</a></li>
         </ul>
-        <div class="flex items-center space-x-2">
+        <div id="dash_div" class="flex items-center space-x-2 hover:text-blue-500">
             <span><a id="dash_name" href="login_signup.html">Login/SignUp</a></span>
             <img id="dp" src="generic-user-icon-9.jpg" alt="User Avatar" class="h-10 rounded-full" width="40" height="40"/ hidden>
         </div>
