--- a/login_signup.html
+++ b/login_signup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,21 +11,23 @@
 <body>
 
     <div class="auth-container">
-        <h2 id="form-title">Login</h2>
-        <form id="authForm">
-            <input type="text" id="mail" placeholder="Mail" required>
-            <!-- Password input with eye button -->
-            <div class="password-container">
-                <input type="password" id="password" placeholder="Password" required>
-                <button type="button" id="togglePassword">👁️</button>
-            </div>
-
-            <p id="error-message"></p>
-            <button id="submit">Login</button>
-            <p class="toggle-text">
-                Don't have an account?<span id="toogle" onclick="toggleForm()">Sign Up</span>
-            </p>
-        </form>
+        <div class="auth-border">
+            <h2 id="form-title">Login</h2>
+            <form id="authForm">
+                <input type="text" id="mail" placeholder="Mail" required>
+                <!-- Password input with eye button -->
+                <div class="password-container">
+                    <input type="password" id="password" placeholder="Password" required>
+                    <button type="button" id="togglePassword">👁️</button>
+                </div>
+                <p id="error-message"></p>
+                <button id="submit"><b>Login</b></button>
+                <div class="toggle-text">
+                    <p id="have_acc">Don't have an account? <span id="toogle" onclick="toggleForm()"><b>Sign Up</b></span></p>
+                    <p id="p_for"><span id="forgot">Forgot Password</span></p>
+                </div>
+            </form>
+        </div>
     </div>
 
     <script type="module" src="loginpage.js"></script>
