Final Commit for loigin/signup page from mye side

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <button class="connect-btn">Let's Connect</button>
         </div>
     <script type="module" src="loginpage.js"></script>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
      <!-- Link to JavaScript File -->
 </body>
 </html>
